# jetraw_tools

./: .buildinfo  .gitignore  .readthedocs.yaml  README.md  api.html  genindex.html  index.html  installation.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree
.github/workflows/: deploy-docs.yml  docs-check.yml  python-publish.yml
_modules/: index.html
_modules/jetraw_tools/: compression_tool.html  tiff_reader.html  tiff_writer.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt
docs/: Makefile  requirements.txt
docs/source/: conf.py
jetraw_tools/: __init__.py  folder_compression.py  tiff_writer.py  utils.py
notebooks/: example_1.ipynb
scr/: jetraw_tiff.py  tiff_reader.py  tiff_writer.py
src/jetraw_tools/: __init__.py  compression_tool.py  config.py  dpcore.py  folder_compression.py  image_reader.py  jetraw_tiff.py  libs.py  logger.py  main.py  parser.py  tiff_reader.py  tiff_writer.py  utils.py
